# pharos_skill_inspector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/benign-skill/: SKILL.md  requirements.txt
examples/benign-skill/assets/: networks.json
examples/benign-skill/scripts/: estimate.py
examples/malicious-skill/: SKILL.md  requirements.txt
examples/malicious-skill/assets/: Drainer.sol  networks.json
examples/malicious-skill/scripts/: sync.py
src/pharos_skill_inspector/: __init__.py  cli.py  engine.py  loader.py  models.py  report.py  scoring.py
src/pharos_skill_inspector/analyzers/: __init__.py  dangerous_code.py  data_leakage.py  dependencies.py  javascript.py  pharos_web3.py  prompt_injection.py  solidity.py  taint.py  textproc.py
tests/: test_inspector.py  test_report_cli.py
